added images into image dir

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
   <link rel="stylesheet" href="/css/index.css">
   <title>5th Wheel AirBnB</title>
 </head>
-<body>
+<body class="landing-body">
+
+  <div class="landing-container">
+
+  </div>
 
 </body>
 </html>
