laid out styles, added an arrow to lead to an about section

--- a/index.html
+++ b/index.html
@@ -9,9 +9,25 @@
 </head>
 <body class="landing-body">
 
-  <div class="landing-container">
+    <div class="landing-container">
+      <div class="landing-content">
+        <div class="heading">
+          <h1>5th</h1>
+          <h1>Wheel</h1>
+          <h1>AirBnB</h1>
+        </div>
+    
+        <div class="heading-btn">
+          <a href="#">Enter</a>
+        </div>
+      </div>
+    </div>
 
-  </div>
+    <div class="arrow-down">
+      <div class="arrow-container">
+        <a href="#"><img src="/images/down-arrow.png" alt="down-arrow"></a>
+      </div>
+    </div>
 
 </body>
 </html>
