updated about us section with placeholder info

--- a/index.html
+++ b/index.html
@@ -9,25 +9,109 @@
 </head>
 <body class="landing-body">
 
-    <div class="landing-container">
-      <div class="landing-content">
-        <div class="heading">
-          <h1>5th</h1>
-          <h1>Wheel</h1>
-          <h1>AirBnB</h1>
-        </div>
-    
-        <div class="heading-btn">
-          <a href="#">Enter</a>
-        </div>
-      </div>
-    </div>
 
-    <div class="arrow-down">
-      <div class="arrow-container">
-        <a href="#"><img src="/images/down-arrow.png" alt="down-arrow"></a>
+  <!--LANDING PAGE-->
+  <div class="landing-container">
+    <div class="landing-content">
+      <div class="heading">
+        <h1>5th</h1>
+        <h1>Wheel</h1>
+        <h1>AirBnB</h1>
+      </div>
+  
+      <div class="heading-btn">
+        <a href="#">Enter</a>
       </div>
     </div>
+  </div>
+
+
+  <!--SMALL ARROW DIVIDING LANDING FROM ABOUT-->
+  <div class="arrow-down">
+    <div class="arrow-container">
+      <a href="#"><img src="/images/down-arrow.png" alt="down-arrow"></a>
+    </div>
+  </div>
+
+
+  <!--ABOUT SECTION-->
+  <section class="about-section">
+
+    <!--FIRST BIO-->
+    <article class="article-one">
+      <div class="about-article-cont cont-one">
+        <div class="img-cont">
+          <img src="/images/portrait-ph.jpg" alt="#">
+        </div>
+        <div class="about-text">
+          <h2>NAME NAME</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quam eaque dolore sapiente expedita incidunt architecto libero accusamus, praesentium vel unde molestias nostrum cum aperiam distinctio tempore ratione nesciunt officia?</p>
+        </div>
+      </div>
+    </article>
+
+    <!--SECOND BIO-->
+    <article class="article-two">
+      <div class="about-article-cont cont-two">
+        <div class="img-cont">
+          <img src="/images/portrait-ph.jpg" alt="#">
+        </div>
+        <div class="about-text">
+          <h2>NAME NAME</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quam eaque dolore sapiente expedita incidunt architecto libero accusamus, praesentium vel unde molestias nostrum cum aperiam distinctio tempore ratione nesciunt officia?</p>
+        </div>
+      </div>
+    </article>
+<!--
+    <article class="article-three">
+      <div class="about-article-cont cont-three">
+        <div class="img-cont">
+          <img src="/images/portrait-ph.jpg" alt="#">
+        </div>
+        <div class="about-text">
+          <h2>NAME NAME</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quam eaque dolore sapiente expedita incidunt architecto libero accusamus, praesentium vel unde molestias nostrum cum aperiam distinctio tempore ratione nesciunt officia?</p>
+        </div>
+      </div>
+    </article>
+
+    <article class="article-four">
+      <div class="about-article-cont cont-four">
+        <div class="img-cont">
+          <img src="/images/portrait-ph.jpg" alt="#">
+        </div>
+        <div class="about-text">
+          <h2>NAME NAME</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quam eaque dolore sapiente expedita incidunt architecto libero accusamus, praesentium vel unde molestias nostrum cum aperiam distinctio tempore ratione nesciunt officia?</p>
+        </div>
+      </div>
+    </article>
+
+    <article class="article-five">
+      <div class="about-article-cont cont-five">
+        <div class="img-cont">
+          <img src="/images/portrait-ph.jpg" alt="#">
+        </div>
+        <div class="about-text">
+          <h2>NAME NAME</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quam eaque dolore sapiente expedita incidunt architecto libero accusamus, praesentium vel unde molestias nostrum cum aperiam distinctio tempore ratione nesciunt officia?</p>
+        </div>
+      </div>
+    </article>
+
+    <article class="article-six">
+      <div class="about-article-cont cont-six">
+        <div class="img-cont">
+          <img src="/images/portrait-ph.jpg" alt="#">
+        </div>
+        <div class="about-text">
+          <h2>NAME NAME</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quam eaque dolore sapiente expedita incidunt architecto libero accusamus, praesentium vel unde molestias nostrum cum aperiam distinctio tempore ratione nesciunt officia?</p>
+        </div>
+      </div>
+    </article>
+    -->
+  </section>
 
 </body>
 </html>
