have completed mobile 500px media queries, added placeholder text for the bios

--- a/index.html
+++ b/index.html
@@ -29,13 +29,17 @@
   <!--SMALL ARROW DIVIDING LANDING FROM ABOUT-->
   <div class="arrow-down">
     <div class="arrow-container">
-      <a href="#"><img src="/images/down-arrow.png" alt="down-arrow"></a>
+      <a href="#about-us"><img src="/images/down-arrow.png" alt="down-arrow"></a>
     </div>
   </div>
 
 
   <!--ABOUT SECTION-->
-  <section class="about-section">
+  <section class="about-section" id="about-us">
+
+    <div class="about-title">
+      <h2>About Us</h2>
+    </div>
 
     <!--FIRST BIO-->
     <article class="article-one">
@@ -44,11 +48,13 @@
           <img src="/images/portrait-ph.jpg" alt="#">
         </div>
         <div class="about-text">
-          <h2>NAME NAME</h2>
+          <h2>NAME NAME 1</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quam eaque dolore sapiente expedita incidunt architecto libero accusamus, praesentium vel unde molestias nostrum cum aperiam distinctio tempore ratione nesciunt officia?</p>
         </div>
       </div>
     </article>
+
+    <hr>
 
     <!--SECOND BIO-->
     <article class="article-two">
@@ -57,61 +63,78 @@
           <img src="/images/portrait-ph.jpg" alt="#">
         </div>
         <div class="about-text">
-          <h2>NAME NAME</h2>
+          <h2>NAME NAME 2</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quam eaque dolore sapiente expedita incidunt architecto libero accusamus, praesentium vel unde molestias nostrum cum aperiam distinctio tempore ratione nesciunt officia?</p>
         </div>
       </div>
     </article>
-<!--
+
+    <hr>
+
+    <!--Third Bio-->
     <article class="article-three">
       <div class="about-article-cont cont-three">
         <div class="img-cont">
           <img src="/images/portrait-ph.jpg" alt="#">
         </div>
         <div class="about-text">
-          <h2>NAME NAME</h2>
+          <h2>NAME NAME 3</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quam eaque dolore sapiente expedita incidunt architecto libero accusamus, praesentium vel unde molestias nostrum cum aperiam distinctio tempore ratione nesciunt officia?</p>
         </div>
       </div>
     </article>
 
+    <hr>
+
+    <!--FOURTH BIO-->
     <article class="article-four">
       <div class="about-article-cont cont-four">
         <div class="img-cont">
           <img src="/images/portrait-ph.jpg" alt="#">
         </div>
         <div class="about-text">
-          <h2>NAME NAME</h2>
+          <h2>NAME NAME 4</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quam eaque dolore sapiente expedita incidunt architecto libero accusamus, praesentium vel unde molestias nostrum cum aperiam distinctio tempore ratione nesciunt officia?</p>
         </div>
       </div>
     </article>
 
+    <hr>
+
+    <!--FIFTH BIO-->
     <article class="article-five">
       <div class="about-article-cont cont-five">
         <div class="img-cont">
           <img src="/images/portrait-ph.jpg" alt="#">
         </div>
         <div class="about-text">
-          <h2>NAME NAME</h2>
+          <h2>NAME NAME 5</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quam eaque dolore sapiente expedita incidunt architecto libero accusamus, praesentium vel unde molestias nostrum cum aperiam distinctio tempore ratione nesciunt officia?</p>
         </div>
       </div>
     </article>
 
+    <hr>
+
+    <!--SIXTH BIO-->
     <article class="article-six">
       <div class="about-article-cont cont-six">
         <div class="img-cont">
           <img src="/images/portrait-ph.jpg" alt="#">
         </div>
         <div class="about-text">
-          <h2>NAME NAME</h2>
+          <h2>NAME NAME 6</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quam eaque dolore sapiente expedita incidunt architecto libero accusamus, praesentium vel unde molestias nostrum cum aperiam distinctio tempore ratione nesciunt officia?</p>
         </div>
       </div>
     </article>
-    -->
   </section>
+
+  
+
+  <footer>
+    <p>&copy; 5th Wheel AirBnB</p>
+  </footer>
 
 </body>
 </html>
