--- a/index.html
+++ b/index.html
@@ -45,11 +45,12 @@
     <article class="article-one">
       <div class="about-article-cont cont-one">
         <div class="img-cont">
-          <img src="/images/portrait-ph.jpg" alt="#">
+          <img src="/images/alan.png" alt="#">
         </div>
         <div class="about-text">
-          <h2>NAME NAME 1</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quam eaque dolore sapiente expedita incidunt architecto libero accusamus, praesentium vel unde molestias nostrum cum aperiam distinctio tempore ratione nesciunt officia?</p>
+          <h2>Alan Fischbach</h2>
+          <h3>UX Designer</h3>
+          <p>My name is Alan and I love to play music, have played Guitar since I was a kid, have a passion for helping people and working with UI related tasks. My strengths are with Sketch, Photoshop, After Effects, Principle, Framer X and Invision Studio.</p>
         </div>
       </div>
     </article>
@@ -60,11 +61,12 @@
     <article class="article-two">
       <div class="about-article-cont cont-two">
         <div class="img-cont">
-          <img src="/images/portrait-ph.jpg" alt="#">
+          <img src="/images/zak.jpg" alt="#">
         </div>
         <div class="about-text">
-          <h2>NAME NAME 2</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quam eaque dolore sapiente expedita incidunt architecto libero accusamus, praesentium vel unde molestias nostrum cum aperiam distinctio tempore ratione nesciunt officia?</p>
+          <h2>Zachary Mayfield</h2>
+          <h3>UI Developer</h3>
+          <p>My name is Zak, I'm a full stack web developer who loves the outdoors and traveling! Previously a scuba diving instructor, I'm always looking for that next adventure with my wife and two fur babies.</p>
         </div>
       </div>
     </article>
@@ -75,10 +77,11 @@
     <article class="article-three">
       <div class="about-article-cont cont-three">
         <div class="img-cont">
-          <img src="/images/portrait-ph.jpg" alt="#">
+          <img src="/images/chaz.jfif" alt="#">
         </div>
         <div class="about-text">
-          <h2>NAME NAME 3</h2>
+          <h2>Chazaray Robinson</h2>
+          <h3>Back-End Developer</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quam eaque dolore sapiente expedita incidunt architecto libero accusamus, praesentium vel unde molestias nostrum cum aperiam distinctio tempore ratione nesciunt officia?</p>
         </div>
       </div>
@@ -90,10 +93,11 @@
     <article class="article-four">
       <div class="about-article-cont cont-four">
         <div class="img-cont">
-          <img src="/images/portrait-ph.jpg" alt="#">
+          <img src="images/john.jfif" alt="#">
         </div>
         <div class="about-text">
-          <h2>NAME NAME 4</h2>
+          <h2>John Marshall</h2>
+          <h3>Front-End Developer</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quam eaque dolore sapiente expedita incidunt architecto libero accusamus, praesentium vel unde molestias nostrum cum aperiam distinctio tempore ratione nesciunt officia?</p>
         </div>
       </div>
@@ -105,10 +109,11 @@
     <article class="article-five">
       <div class="about-article-cont cont-five">
         <div class="img-cont">
-          <img src="/images/portrait-ph.jpg" alt="#">
+          <img src="/images/ignacio.jfif" alt="#">
         </div>
         <div class="about-text">
-          <h2>NAME NAME 5</h2>
+          <h2>Ignacio San Martin</h2>
+          <h3>Front-End Developer</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quam eaque dolore sapiente expedita incidunt architecto libero accusamus, praesentium vel unde molestias nostrum cum aperiam distinctio tempore ratione nesciunt officia?</p>
         </div>
       </div>
@@ -120,11 +125,12 @@
     <article class="article-six">
       <div class="about-article-cont cont-six">
         <div class="img-cont">
-          <img src="/images/portrait-ph.jpg" alt="#">
+          <img src="/images/erlap.jfif" alt="#">
         </div>
         <div class="about-text">
-          <h2>NAME NAME 6</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quam eaque dolore sapiente expedita incidunt architecto libero accusamus, praesentium vel unde molestias nostrum cum aperiam distinctio tempore ratione nesciunt officia?</p>
+          <h2>Erlap Kor</h2>
+          <h3>Project Manager</h3>
+          <p>Hello, I am passionate about Javascript, building great user experiences, fighting for simplicity over complexity, constantly learning and sharing.</p>
         </div>
       </div>
     </article>
