updated hero image to match design / updated login button to match color scheme / updated about us to be more visually appealing and added photo to the about us / updated the who we are section / responsive at desktop, tablet, and mobile

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
   
       <div class="heading-btn">
-        <a href="#">Enter</a>
+        <a href="#">Log In</a>
       </div>
     </div>
   </div>
@@ -33,109 +33,136 @@
     </div>
   </div>
 
+  <!--BG SQUARES-->
+  <div class="bg-one">
+    <div class="bg-two"></div>
+    <div class="bg-three"></div>
+    <div class="bg-four"></div>
+  </div>
+  
 
-  <!--ABOUT SECTION-->
-  <section class="about-section" id="about-us">
+  <!--ABOUT US-->
+  <section id="about-us" class="about-us">
+    <div class="about-container">
+      <div class="about-title">
+        <h2>About Us</h2>
+      </div>
 
-    <div class="about-title">
-      <h2>About Us</h2>
+      <div class="text-img-cont">
+        <div class="about-text">
+          <p><span class="bold">5th wheel Airbnb</span> is a <span class="underline">connection</span> between land owners and 5th wheel / RV owners. RV parks are often cramped and in many areas are booked months in advance. 
+          <br>  
+          <br>
+            
+          Collectively, landowners hold vast swaths of unused land that could be earning them revenue.  By using 5th wheel Airbnb, RV Owners get  access to use these previously unknown/unavailable sites, and Landowners get to cash in on otherwise dormant or underutilized land.
+          <br>
+          <br>
+          So whether you're an avid explorer travelling across the country, or a home owner with only enough property for a single RV, 5th Wheel Airbnb is for you.
+        </p>
+        </div>
+  
+        <div class="rv-img-cont">
+          <img src="/images/rv-night.jpg" alt="rv overlooking the night sky">
+        </div>
+      </div>
     </div>
-
-    <!--FIRST BIO-->
-    <article class="article-one">
-      <div class="about-article-cont cont-one">
-        <div class="img-cont">
-          <img src="/images/alan.png" alt="#">
-        </div>
-        <div class="about-text">
-          <h2>Alan Fischbach</h2>
-          <h3>UX Designer</h3>
-          <p>My name is Alan and I love to play music, have played Guitar since I was a kid, have a passion for helping people and working with UI related tasks. My strengths are with Sketch, Photoshop, After Effects, Principle, Framer X and Invision Studio.</p>
-        </div>
-      </div>
-    </article>
-
-    <hr>
-
-    <!--SECOND BIO-->
-    <article class="article-two">
-      <div class="about-article-cont cont-two">
-        <div class="img-cont">
-          <img src="/images/zak.jpg" alt="#">
-        </div>
-        <div class="about-text">
-          <h2>Zachary Mayfield</h2>
-          <h3>UI Developer</h3>
-          <p>My name is Zak, I'm a full stack web developer who loves the outdoors and traveling! Previously a scuba diving instructor, I'm always looking for that next adventure with my wife and two fur babies.</p>
-        </div>
-      </div>
-    </article>
-
-    <hr>
-
-    <!--Third Bio-->
-    <article class="article-three">
-      <div class="about-article-cont cont-three">
-        <div class="img-cont">
-          <img src="/images/chaz.jfif" alt="#">
-        </div>
-        <div class="about-text">
-          <h2>Chazaray Robinson</h2>
-          <h3>Back-End Developer</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quam eaque dolore sapiente expedita incidunt architecto libero accusamus, praesentium vel unde molestias nostrum cum aperiam distinctio tempore ratione nesciunt officia?</p>
-        </div>
-      </div>
-    </article>
-
-    <hr>
-
-    <!--FOURTH BIO-->
-    <article class="article-four">
-      <div class="about-article-cont cont-four">
-        <div class="img-cont">
-          <img src="images/john.jfif" alt="#">
-        </div>
-        <div class="about-text">
-          <h2>John Marshall</h2>
-          <h3>Front-End Developer</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quam eaque dolore sapiente expedita incidunt architecto libero accusamus, praesentium vel unde molestias nostrum cum aperiam distinctio tempore ratione nesciunt officia?</p>
-        </div>
-      </div>
-    </article>
-
-    <hr>
-
-    <!--FIFTH BIO-->
-    <article class="article-five">
-      <div class="about-article-cont cont-five">
-        <div class="img-cont">
-          <img src="/images/ignacio.jfif" alt="#">
-        </div>
-        <div class="about-text">
-          <h2>Ignacio San Martin</h2>
-          <h3>Front-End Developer</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quam eaque dolore sapiente expedita incidunt architecto libero accusamus, praesentium vel unde molestias nostrum cum aperiam distinctio tempore ratione nesciunt officia?</p>
-        </div>
-      </div>
-    </article>
-
-    <hr>
-
-    <!--SIXTH BIO-->
-    <article class="article-six">
-      <div class="about-article-cont cont-six">
-        <div class="img-cont">
-          <img src="/images/erlap.jfif" alt="#">
-        </div>
-        <div class="about-text">
-          <h2>Erlap Kor</h2>
-          <h3>Project Manager</h3>
-          <p>Hello, I am passionate about Javascript, building great user experiences, fighting for simplicity over complexity, constantly learning and sharing.</p>
-        </div>
-      </div>
-    </article>
   </section>
 
+  <div class="line-break">
+    <hr>
+  </div>
+
+  <!--WHO WE ARE-->
+  <section class="who-we-are">
+    <div class="who-container">
+
+
+      <article class="bio-one">
+        <div class="bio-cont  bio-one-cont">
+          <div class="img-cont">
+            <img src="/images/alan.png" alt="#">
+          </div>
+
+          <div class="bio-text  bio-text-one">
+            <h2>Alan Fischbach</h2>
+            <h3>UX Designer</h3>
+            <p>My name is Alan and I love to play music, have played Guitar since I was a kid, have a passion for helping people and working with UI related tasks. My strengths are with Sketch, Photoshop, After Effects, Principle, Framer X and Invision Studio.</p>
+          </div>
+        </div>
+      </article>
+
+      <article class="bio-two">
+        <div class="bio-cont  bio-two-cont">
+          <div class="img-cont">
+            <img src="/images/zak.jpg" alt="#">
+          </div>
+          <div class="bio-text  bio-text-two">
+            <h2>Zachary Mayfield</h2>
+            <h3>UI Developer</h3>
+            <p>My name is Zak, I'm a full stack web developer who loves the outdoors and traveling! Previously a scuba diving instructor, I'm always looking for that next adventure with my wife and two fur babies.</p>
+          </div>
+        </div>
+      </article>
+
+      <article class="bio-three">
+        <div class="bio-cont  bio-three-cont">
+          <div class="img-cont">
+            <img src="/images/chaz.jfif" alt="#">
+          </div>
+          <div class="bio-text  bio-text-three">
+            <h2>Chazaray Robinson</h2>
+            <h3>Back-End Developer</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quam eaque dolore sapiente expedita incidunt architecto libero accusamus, praesentium vel unde molestias nostrum cum aperiam distinctio tempore ratione nesciunt officia?</p>
+          </div>
+        </div>
+      </article>
+
+      <article class="bio-four">
+        <div class="bio-cont  bio-four-cont">
+          <div class="img-cont">
+            <img src="images/john.jfif" alt="#">
+          </div>
+          <div class="bio-text  bio-text-four">
+            <h2>John Marshall</h2>
+            <h3>Front-End Developer</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quam eaque dolore sapiente expedita incidunt architecto libero accusamus, praesentium vel unde molestias nostrum cum aperiam distinctio tempore ratione nesciunt officia?</p>
+          </div>
+        </div>
+      </article>
+
+      <article class="bio-five">
+        <div class="bio-cont  bio-five-cont">
+          <div class="img-cont">
+            <img src="/images/ignacio.jfif" alt="#">
+          </div>
+          <div class="bio-text  bio-text-five">
+            <h2>Ignacio San Martin</h2>
+            <h3>Front-End Developer</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quam eaque dolore sapiente expedita incidunt architecto libero accusamus, praesentium vel unde molestias nostrum cum aperiam distinctio tempore ratione nesciunt officia?</p>
+          </div>
+        </div>
+      </article>
+
+      <article class="bio-six">
+        <div class="bio-cont  bio-six-cont">
+          <div class="img-cont">
+            <img src="/images/erlap.jfif" alt="#">
+          </div>
+          <div class="bio-text bio-text-six">
+            <h2>Eralp Kor</h2>
+            <h3>Project Manager</h3>
+            <p>Hello, I am passionate about Javascript, building great user experiences, fighting for simplicity over complexity, constantly learning and sharing.</p>
+          </div>
+        </div>
+      </article>
+
+
+    </div>
+  </section>
+
+  <div class="line-break">
+    <hr>
+  </div>
   
 
   <footer>
