updated hero / log in button / h1 / about us / and meet the team

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="/css/index.css">
-  <title>5th Wheel AirBnB</title>
+  <title>5th Wheel Airbnb</title>
 </head>
 <body class="landing-body">
 
@@ -16,7 +16,7 @@
       <div class="heading">
         <h1>5th</h1>
         <h1>Wheel</h1>
-        <h1>AirBnB</h1>
+        <h1>Airbnb</h1>
       </div>
   
       <div class="heading-btn">
@@ -68,11 +68,17 @@
     </div>
   </section>
 
+
   <div class="line-break">
     <hr>
   </div>
 
+
   <!--WHO WE ARE-->
+  <div class="meet-the-team">
+    <h2>Meet The Team</h2>
+  </div>
+
   <section class="who-we-are">
     <div class="who-container">
 
