adjusted file paths to css and images within html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="/css/index.css">
+  <link rel="stylesheet" href="./css/index.css">
   <title>5th Wheel Airbnb</title>
 </head>
 <body class="landing-body">
@@ -29,7 +29,7 @@
   <!--SMALL ARROW DIVIDING LANDING FROM ABOUT-->
   <div class="arrow-down">
     <div class="arrow-container">
-      <a href="#about-us"><img src="/images/down-arrow.png" alt="down-arrow"></a>
+      <a href="#about-us"><img src="./images/down-arrow.png" alt="down-arrow"></a>
     </div>
   </div>
 
@@ -62,7 +62,7 @@
         </div>
   
         <div class="rv-img-cont">
-          <img src="/images/rv-night.jpg" alt="rv overlooking the night sky">
+          <img src="./images/rv-night.jpg" alt="rv overlooking the night sky">
         </div>
       </div>
     </div>
@@ -86,7 +86,7 @@
       <article class="bio-one">
         <div class="bio-cont  bio-one-cont">
           <div class="img-cont">
-            <img src="/images/alan.png" alt="#">
+            <img src="./images/alan.png" alt="#">
           </div>
 
           <div class="bio-text  bio-text-one">
@@ -100,7 +100,7 @@
       <article class="bio-two">
         <div class="bio-cont  bio-two-cont">
           <div class="img-cont">
-            <img src="/images/zak.jpg" alt="#">
+            <img src="./images/zak.jpg" alt="#">
           </div>
           <div class="bio-text  bio-text-two">
             <h2>Zachary Mayfield</h2>
@@ -113,7 +113,7 @@
       <article class="bio-three">
         <div class="bio-cont  bio-three-cont">
           <div class="img-cont">
-            <img src="/images/chaz.jfif" alt="#">
+            <img src="./images/chaz.jfif" alt="#">
           </div>
           <div class="bio-text  bio-text-three">
             <h2>Chazaray Robinson</h2>
@@ -126,7 +126,7 @@
       <article class="bio-four">
         <div class="bio-cont  bio-four-cont">
           <div class="img-cont">
-            <img src="images/john.jfif" alt="#">
+            <img src="./images/john.jfif" alt="#">
           </div>
           <div class="bio-text  bio-text-four">
             <h2>John Marshall</h2>
@@ -139,7 +139,7 @@
       <article class="bio-five">
         <div class="bio-cont  bio-five-cont">
           <div class="img-cont">
-            <img src="/images/ignacio.jfif" alt="#">
+            <img src="./images/ignacio.jfif" alt="#">
           </div>
           <div class="bio-text  bio-text-five">
             <h2>Ignacio San Martin</h2>
@@ -152,7 +152,7 @@
       <article class="bio-six">
         <div class="bio-cont  bio-six-cont">
           <div class="img-cont">
-            <img src="/images/erlap.jfif" alt="#">
+            <img src="./images/erlap.jfif" alt="#">
           </div>
           <div class="bio-text bio-text-six">
             <h2>Eralp Kor</h2>
