figured out bug with hero

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           <div class="bio-text  bio-text-three">
             <h2>Chazaray Robinson</h2>
             <h3>Back-End Developer</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quam eaque dolore sapiente expedita incidunt architecto libero accusamus, praesentium vel unde molestias nostrum cum aperiam distinctio tempore ratione nesciunt officia?</p>
+            <p>My name is Chaz and I love football, painting and riding around on warm summer days. My passions include creating beautiful applications and seeing the joy that it brings people!</p>
           </div>
         </div>
       </article>
@@ -131,7 +131,8 @@
           <div class="bio-text  bio-text-four">
             <h2>John Marshall</h2>
             <h3>Front-End Developer</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quam eaque dolore sapiente expedita incidunt architecto libero accusamus, praesentium vel unde molestias nostrum cum aperiam distinctio tempore ratione nesciunt officia?</p>
+            <p>Hi, I'm John. What I love doing the most is taking my 9 dogs for walks and creating amazing applications for all kinds of users!
+            </p>
           </div>
         </div>
       </article>
@@ -144,7 +145,7 @@
           <div class="bio-text  bio-text-five">
             <h2>Ignacio San Martin</h2>
             <h3>Front-End Developer</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quam eaque dolore sapiente expedita incidunt architecto libero accusamus, praesentium vel unde molestias nostrum cum aperiam distinctio tempore ratione nesciunt officia?</p>
+            <p>My name is Ignacio, I have degree in aeronauticle engineering, I love to cook, and have a passion for programming! Sometimes even combining the two!</p>
           </div>
         </div>
       </article>
