added link to front end

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
   
       <div class="heading-btn">
-        <a href="#">Log In</a>
+        <a href="http://rv-bnb.netlify.com/" target="_blank"'>See The App!</a>
       </div>
     </div>
   </div>
